# fugolok

./: README.md  package-lock.json  package.json
bugolok/: .gitignore  pyproject.toml
bugolok/src/bugolok/: main.py
public/: index.html
src/: App.vue  firebase.js  main.js  router.js
src/assets/css/: buttons.scss  custom_notification.scss  custom_tour.scss  custom_vue_draggable_resizable.scss  drag_and_drop.scss  index.scss  input.scss  keyboard_shortcut.scss  tooltip.scss  utils.scss
src/assets/js/: pixel.js
src/business_logic/: icons.js  windows.js
src/components/: Home.vue  Konva.vue  Library.vue  Test.vue  Window_1.vue  Window_2.vue
src/components/Auth/: LoginWindow.vue  RegisterWindow.vue
src/components/DropMeFile/: Form.vue  index.scss
src/components/Elements/Button/: Button.vue
src/components/Elements/ContextMenu/: ContextMenu.vue  ContextMenuItem.vue
src/components/Ex/: ExDropMe.vue  ExWindow.vue
src/components/Icons/: Icon.vue
src/components/ImageLibrary/: ImageLibrary.vue
src/components/Taskbar/: Start.vue  TaskButton.vue  Taskbar.vue
src/components/Window/: Window.vue  WindowRaw.vue  index.scss
src/components/Windows/: Account.vue  DragAndDropFilm.vue  ExDropMe.vue  Help.vue  Library.vue  Radio.vue  SimpleFilm.vue
src/cookies/: utils.js
src/store/: index.js
src/store/modules/: login.js  posts.js  storage.js  user.js  windows.js
src/utils/: human_readable.js  neon.js  random.js
src/views/auth/: Login.vue  Register.vue
src/views/errors/: 404.vue
src/views/home/: Home.vue
src/views/land/: Land.vue
(+6 files in other folders)
