[tool.poetry]
name = "bugolok"
version = "0.1.0"
description = ""
authors = ["alzhuchkov <alzhuchkov@ozon.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
firebase-admin = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
